analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/AnnotationModifiers.kmp.java
public final class A /* A*/ {
  @org.jetbrains.annotations.NotNull()
  private @org.jetbrains.annotations.NotNull() java.lang.String c = "" /* initializer type: java.lang.String */;

  @<error>()
  @<error>()
  public final void f();//  f()

  @org.jetbrains.annotations.NotNull()
  public final @org.jetbrains.annotations.NotNull() java.lang.String getC();//  getC()

  public  A();//  .ctor()

  public final void setC(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() java.lang.String);//  setC(@org.jetbrains.annotations.NotNull() java.lang.String)
}
